--- a/client-react/src/config/Config.module.scss
+++ b/client-react/src/config/Config.module.scss
@@ -1,15 +1,7 @@
 .container {
-    margin-top: 50px;
-    margin-bottom: 20px;
-    margin-left: 40px;
-    margin-right: 40px;
-
     padding-top: 20px;
     padding-bottom: 20px;
-    padding-left: 20px;
-    padding-right: 20px;
     border-radius: 20px;
-
 
     background-color: rgba(102, 198, 185, 0.379);
     backdrop-filter: blur(5px);
@@ -19,6 +11,13 @@
 
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    max-width: 800px;
+    box-sizing: border-box;
+    align-self: center;
+    margin: auto;
+    margin-top: 40px;
 }
 
 .title {
@@ -40,7 +39,6 @@
     padding-bottom: 20px;
     padding-left: 20px;
     padding-right: 20px;
-    border-radius: 20px;
 
     .b {
         font-size: 1.5rem;
@@ -48,7 +46,7 @@
 }
 
 .configFields {
-    margin-top: 30px;
+    margin-top: 20px;
 
     background-color: rgba(57, 108, 102, 0.179);
     border-radius: 20px;
