--- a/client-react/src/home/Area.module.scss
+++ b/client-react/src/home/Area.module.scss
@@ -9,101 +9,220 @@
     padding-left: 10px;
     padding-right: 5px;
     display: flex;
-    // flex-direction: column;
-}
-
-.setting {
-    margin-top: 20px;
-    margin-bottom: 20px;
-    margin-left: 20px;
-    margin-right: 40px;
-
-    padding-top: 20px;
-    padding-bottom: 20px;
-    padding-left: 20px;
-    padding-right: 20px;
-    border-radius: 20px;
-
-
-    background-color: rgba(57, 108, 102, 0.179);
-    // backdrop-filter: blur(5px);
-    // box-shadow: 0 0 30px rgba(0, 0, 0, .2);
-    // border: 2px solid rgb(139, 194, 236);
-    border-radius: 15px;
-
-    display: flex;
     flex-direction: column;
-
-    .setNameContainer {
-        position: relative;
-        display: inline-block;
-
-        input {
-            font-size: 1.8rem;
-            background-color: rgba(0, 0, 0, 0);
-            font-weight: 600;
-            padding-left: 37px;
-
-            border: none;
-
-            &:focus {
-                outline: none;
-                border: none;
-            }
-
-            &:-webkit-autofill,
-            &:-webkit-autofill:hover,
-            &:-webkit-autofill:focus,
-            &:-webkit-autofill:active {
-                -webkit-background-clip: text;
-                transition: background-color 5000s ease-in-out 0s;
-                box-shadow: inset 0 0 20px 20px rgba(0, 0, 0, 0);
-            }
-
-            @include phone {
-                font-size: 1rem;
-            }
-        }
-
-        .icon {
-            font-size: 23px;
-            font-weight: 300;
-            position: absolute;
-            top: 45%;
-            left: 10px;
-            transform: translateY(-50%);
-            color: rgba(0, 0, 0, 0.89);
-        }
-    }
-
-    .addPlan {
-        // flex-flow: row;
-    }
 }
 
-.switchContainer {
+.containerNav {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+
+    .setting {
+        margin-top: 10px;
+        margin-bottom: 20px;
+        margin-left: 10px;
+        margin-right: 10px;
+
+        padding-top: 15px;
+        padding-bottom: 15px;
+        padding-left: 15px;
+        padding-right: 15px;
+        border-radius: 20px;
+
+
+
+        background-color: rgba(57, 108, 102, 0.179);
+        // background-color: aliceblue;
+        // backdrop-filter: blur(5px);
+        // box-shadow: 0 0 30px rgba(0, 0, 0, .2);
+        // border: 2px solid rgb(139, 194, 236);
+        border-radius: 15px;
+
+        display: flex;
+        flex-direction: column;
+
+        .firstRowContainer {
+            display: flex;
+            flex-direction: row;
+            margin-bottom: 20px;
+
+            .setNameContainer {
+                position: relative;
+                // display: inline-block;
+
+                input {
+                    font-size: 1.9rem;
+                    background-color: rgba(0, 0, 0, 0);
+                    font-weight: 600;
+                    padding-left: 40px;
+                    border: none;
+
+                    width: 10ch;
+
+                    &:focus {
+                        outline: none;
+                        border: none;
+                    }
+
+                    &:-webkit-autofill,
+                    &:-webkit-autofill:hover,
+                    &:-webkit-autofill:focus,
+                    &:-webkit-autofill:active {
+                        -webkit-background-clip: text;
+                        transition: background-color 5000s ease-in-out 0s;
+                        box-shadow: inset 0 0 20px 20px rgba(0, 0, 0, 0);
+                    }
+
+                    @include phone {
+                        font-size: 1rem;
+                    }
+                }
+
+                .icon {
+                    font-size: 23px;
+                    font-weight: 300;
+                    position: absolute;
+                    top: 32%;
+                    left: 10px;
+                    transform: translateY(-50%);
+                    color: rgba(0, 0, 0, 0.89);
+
+                    &:hover {
+                        cursor: pointer;
+                    }
+                }
+            }
+
+            .addPlan {
+                font-size: 1.6rem;
+                cursor: pointer;
+                transition: transform 0.3s;
+                margin-bottom: 20px;
+                font-weight: 600;
+                border-radius: 20px;
+                background: none;
+
+                padding-top: 8px;
+                padding-bottom: 8px;
+                padding-right: 20px;
+                padding-left: 20px;
+                background-color: rgba(0, 0, 0, 0.1);
+
+                &:hover {
+                    transform: scale(1.1);
+                }
+
+                @include phone {
+                    font-size: 1.3rem;
+                    padding-top: 5px;
+                }
+            }
+        }
+
+        .switchContainer {
+            display: flex;
+            margin-bottom: 6px;
+            flex-direction: row;
+            justify-content: space-between;
+
+            label {
+                font-weight: 500;
+                font-size: 1.5rem;
+                font-style: italic;
+            }
+
+        }
+
+    }
+
+    .status {
+        margin-top: 10px;
+        margin-bottom: 20px;
+        margin-left: 10px;
+        margin-right: 10px;
+
+        padding-top: 15px;
+        padding-bottom: 15px;
+        padding-left: 15px;
+        padding-right: 15px;
+        border-radius: 20px;
+
+        background-color: rgba(57, 108, 102, 0.179);
+        border-radius: 15px;
+
+        animation: blink 3s infinite;
+
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+    }
+
+    .manualButtonContainer {
+        margin-top: 10px;
+        margin-bottom: 10px;
+        margin-left: 10px;
+        margin-right: 10px;
+
+        padding-top: 15px;
+        padding-bottom: 15px;
+        padding-left: 15px;
+        padding-right: 15px;
+        border-radius: 20px;
+
+        background-color: rgba(57, 108, 102, 0.179);
+        border-radius: 15px;
+
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        // animation: blink 3s infinite;
+
+        .manualButton {
+            border-radius: 50%;
+            width: 200px;
+            height: 200px;
+            font-size: 2rem;
+            font-style: italic;
+            font-weight: 500;
+            background-color: rgba(0, 0, 0, 0.2);
+            margin-bottom: 10px;
+
+            // background-color: rgba(102, 198, 185, 0.4);
+            backdrop-filter: blur(5px);
+            box-shadow: 0 0 30px rgba(0, 0, 0, .5);
+            border: 4px solid rgb(139, 194, 236);
+        }
+
+        .manualButtonOpen {
+            background-color: red;
+        }
+    }
 }
 
-.manualButton {
-    //     width: 150px;
-    //     height: 150px;
-    //     border-radius: 50%;
-    //     background-color: #007bff;
-    //     color: black;
-    //     text-align: center;
-    //     line-height: 100px;
-    //     font-size: 30px;
-    //     cursor: pointer;
+.containerPlans {
+    display: flex;
+    flex-direction: row;
+}
 
-    //     :hover {
-    //         background: linear-gradient(to bottom, #a2cea4, #4CAF50);
-    //         box-shadow: 0px 3px 0px 0px #8e4e3e;
-    //     }
-    // }
 
-    // .manualButtonOpen {
-    //     background-color: #ff0000;
+[info] {
+    position: relative;
+}
+
+[info]:hover::after {
+    content: attr(info);
+    position: absolute;
+    top: 10%;
+    left: 30%;
+    transform: translateX(-50%);
+    background-color: rgba(0, 0, 0, 0.3);
+    padding: 5px 10px;
+    border-radius: 5px;
+    font-size: 1rem;
+    color: rgb(230, 211, 211);
+    // z-index: 1;
+    z-index: $z-index-top-1 ;
+    font-size: large;
+    font-style: italic;
+    font-weight: 500;
 }
