--- a/client-react/src/home/Switch.module.scss
+++ b/client-react/src/home/Switch.module.scss
@@ -21,7 +21,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: #ccc;
+    background-color: #ccccccac;
     transition: 0.4s;
     border-radius: 34px;
 
@@ -39,7 +39,7 @@
 }
 
 .input:checked+.slider {
-    background-color: #2196f3;
+    background-color: #21f372af;
 
     &.slider::before {
         transform: translateX(26px);
