--- a/client-react/src/globals.scss
+++ b/client-react/src/globals.scss
@@ -40,3 +40,8 @@ $z-index-top-9: 1;
 $z-index-middle: 0;
 $z-index-background-gif: -1;
 $z-index-buttom: -2;
+
+$background-body: rgba(126, 170, 128, 0.088);
+$background-login: rgba(0, 0, 0, 0.01);
+$background-navbar: rgba(151, 76, 164, 0.2);
+$background-section: rgba(0, 0, 0, 0.09);
