--- a/client-react/src/home/Area.module.scss
+++ b/client-react/src/home/Area.module.scss
@@ -1,7 +1,6 @@
 @import '../globals.scss';
 
 .container {
-    // border: 1px solid gray;
     border-radius: 20px;
     margin-top: 5px;
     padding-top: 10px;
@@ -15,6 +14,10 @@
 .containerNav {
     display: flex;
     flex-direction: row;
+
+    @include phone {
+        flex-direction: column;
+    }
 
     .setting {
         margin-top: 10px;
@@ -30,7 +33,7 @@
 
 
 
-        background-color: rgba(57, 108, 102, 0.179);
+        background-color: $background-section;
         // background-color: aliceblue;
         // backdrop-filter: blur(5px);
         // box-shadow: 0 0 30px rgba(0, 0, 0, .2);
@@ -93,23 +96,10 @@
             }
 
             .addPlan {
-                font-size: 1.6rem;
-                cursor: pointer;
-                transition: transform 0.3s;
-                margin-bottom: 20px;
-                font-weight: 600;
-                border-radius: 20px;
-                background: none;
-
                 padding-top: 8px;
                 padding-bottom: 8px;
                 padding-right: 20px;
                 padding-left: 20px;
-                background-color: rgba(0, 0, 0, 0.1);
-
-                &:hover {
-                    transform: scale(1.1);
-                }
 
                 @include phone {
                     font-size: 1.3rem;
@@ -132,6 +122,10 @@
 
         }
 
+        .deleteContainer{
+            margin-top: 20px;
+        }
+
     }
 
     .status {
@@ -146,7 +140,7 @@
         padding-right: 15px;
         border-radius: 20px;
 
-        background-color: rgba(57, 108, 102, 0.179);
+        background-color: $background-section;
         border-radius: 15px;
 
         animation: blink 3s infinite;
@@ -154,6 +148,10 @@
         display: flex;
         flex-direction: row;
         align-items: center;
+
+        @include phone {
+            justify-content: space-around;
+        }
     }
 
     .manualButtonContainer {
@@ -168,40 +166,21 @@
         padding-right: 15px;
         border-radius: 20px;
 
-        background-color: rgba(57, 108, 102, 0.179);
-        border-radius: 15px;
+        background-color: $background-section;
 
         display: flex;
         flex-direction: column;
         align-items: center;
-
-        // animation: blink 3s infinite;
-
-        .manualButton {
-            border-radius: 50%;
-            width: 200px;
-            height: 200px;
-            font-size: 2rem;
-            font-style: italic;
-            font-weight: 500;
-            background-color: rgba(0, 0, 0, 0.2);
-            margin-bottom: 10px;
-
-            // background-color: rgba(102, 198, 185, 0.4);
-            backdrop-filter: blur(5px);
-            box-shadow: 0 0 30px rgba(0, 0, 0, .5);
-            border: 4px solid rgb(139, 194, 236);
-        }
-
-        .manualButtonOpen {
-            background-color: red;
-        }
     }
 }
 
 .containerPlans {
     display: flex;
     flex-direction: row;
+
+    @include phone {
+        flex-direction: column;
+    }
 }
 
 
