--- a/client-react/src/home/EditPlan.module.scss
+++ b/client-react/src/home/EditPlan.module.scss
@@ -6,35 +6,45 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.3);
-    backdrop-filter: blur(5px);
+    background: rgba(81, 109, 105, 0.509);
+    backdrop-filter: blur(10px);
     z-index: $z-index-top-2;
     border-radius: 15px;
 }
 
 .form {
-    position: fixed;
-    // top: 50%;
-    // left: 50%;
-    // transform: translate(-50%, -50%);
-    padding: 20px;
-    z-index: $z-index-top-1;
+    position: absolute;
+    top: 20px;
+    left: 50%;
+    transform: translate(-50%, 0%);
+    // z-index: $z-index-top-1;
 
-    background-color: rgba(116, 213, 200, 0.354);
-    backdrop-filter: blur(5px);
+    background-color: rgba(77, 199, 229, 0.242);
+    backdrop-filter: blur(20px);
     box-shadow: 0 0 30px rgba(0, 0, 0, .5);
     border: 2px solid rgb(139, 194, 236);
     border-radius: 20px;
 
-    display: flex;
-    flex-direction: column;
+    display: block;
+    display: inline-block;
+    min-width: 400px;
     border-radius: 20px;
+    width: fit-content;
+    justify-self: center;
+    align-self: center;
+
 
     padding-left: 20px;
     padding-right: 20px;
     padding-top: 20px;
     padding-bottom: 30px;
-    width: 30%;
+
+    margin-bottom: 30px;
+
+    @include phone {
+        max-width: 390px;
+        width: 90%;
+    }
 }
 
 .cancel {
@@ -50,7 +60,7 @@
 
     &:hover {
         transform: scale(1.3);
-        background-color: rgba(102, 198, 185, 0.4);
+        background-color: rgba(42, 86, 81, 0.281);
     }
 }
 
