--- a/client-react/src/home/Home.module.scss
+++ b/client-react/src/home/Home.module.scss
@@ -9,7 +9,7 @@
     padding-left: 20px;
     padding-right: 20px;
 
-    background-color: rgba(102, 198, 185, 0.379);
+    background-color: $background-body;
     backdrop-filter: blur(5px);
     box-shadow: 0 0 30px rgba(0, 0, 0, .5);
     border: 2px solid rgb(139, 194, 236);
@@ -17,8 +17,25 @@
 
     font-size: 30px;
     font-weight: 400;
-    // display: none;
-    // width: 100%;
+
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    align-self: center; 
+    justify-content: center;
+    margin: auto;
+    margin-top: 40px;
+    width: fit-content;
+
+    @include phone {
+        margin-top: 20px;
+        margin-bottom: 20px;
+        margin-left: 10px;
+        margin-right: 10px;
+        padding-bottom: 20px;
+        padding-left: 10px;
+        padding-right: 10px;
+    }
 }
 
 .tabs {
@@ -27,7 +44,7 @@
 }
 
 .selectedTabs {
-    background-color: #007bff;
+    background-color: #007bff8a;
     /* Change to your preferred background color */
     color: #fff;
     /* Change to your preferred text color */
@@ -53,6 +70,7 @@
     font-size: 30px;
     font-weight: 500;
     transition: transform 0.5s, background-color 0.5s;
+    // border-radius: 20px;
 
     &:hover {
         transform: scale(1.05);
@@ -63,23 +81,10 @@
 
 .selectedTab {
     border-bottom: 4px solid gray;
-    background-color: rgba(132, 158, 116, 0.466);
+    background-color: rgba(134, 211, 225, 0.912);
     border-radius: 5px;
 }
 
-// .react-tabs__tab--selected {
-//     color: #0099ff;
-//     border: 1px solid #0099ff;
-//     // border-bottom: none; /* Updated line */
-//     &:focus {
-//         border: none;
-
-//         &::after {
-//             border: none;
-//         }
-//     }
-// }
-
-// .tabPanel {
-//     // background-color: rgba(42, 46, 165, 0.859);
-// }
+.h1 {
+    text-align: center;
+}
