--- a/client-react/src/home/components/CircularProgressBar.module.scss
+++ b/client-react/src/home/components/CircularProgressBar.module.scss
@@ -1,3 +1,5 @@
+@import '../../globals.scss';
+
 :root {
     --color1: red;
     --color2: rgb(111, 200, 73);
@@ -68,6 +70,7 @@
 
 .container {
     border-radius: 20px;
+
     // animation: blink 3s infinite;
 }
 
@@ -79,7 +82,7 @@
 
 .background {
     fill: none;
-    stroke:rgba(240, 255, 241, 0.506);
+    stroke: rgba(240, 255, 241, 0.506);
 }
 
 .progress {
