--- a/client-react/src/navbar/Navbar.module.scss
+++ b/client-react/src/navbar/Navbar.module.scss
@@ -8,7 +8,7 @@
     z-index: $z-index-navbar;
     padding-bottom: 10px;
     border-bottom: 1px solid;
-    background-color: rgba(102, 198, 185, 0.155);
+    background-color: $background-navbar;
     backdrop-filter: blur(5px);
     box-shadow: 0 0 30px rgba(0, 0, 0, 0.692);
     border: 2px solid rgb(139, 194, 236);
