--- a/client-react/src/navbar/Navbar.module.scss
+++ b/client-react/src/navbar/Navbar.module.scss
@@ -60,4 +60,10 @@
         font-weight: 700;
         padding-top: 2px;
     }
+
+    @include tablet {
+        font-size: 1.2rem;
+        font-weight: 700;
+        padding-top: 2px;
+    }
 }
