--- a/client-react/src/home/Area.module.scss
+++ b/client-react/src/home/Area.module.scss
@@ -108,6 +108,13 @@
             }
         }
 
+        .tapId {
+            font-weight: 500;
+            font-size: 1.5rem;
+            font-style: italic;
+            margin-bottom: 12px;
+        }
+
         .switchContainer {
             display: flex;
             margin-bottom: 6px;
